--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
+
 <!DOCTYPE html>
-
-
-<!-- Ultimate Game Stash file--> 
-<!-- For the regularly updating doc go to https://docs.google.com/document/d/1_FmH3BlSBQI7FGgAQL59-ZPe8eCxs35wel6JUyVaG8Q/ --> 
-
-
 <html lang="en-us">
-<base href="https://cdn.jsdelivr.net/gh/bubbls/UGS-Assets@354e3c6939a08e472482653567d566ba3a2aa527/half%20life/">
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<meta name="MobileOptimized" content="2000" />
+	<meta name="MobileOptimized" content="640" />
 	<meta name="HandheldFriendly" content="true" />
-	<title>ProdByXander - Half Life</title>
-	
+	<title>Xash</title>
 	<script>
 		document.addEventListener('contextmenu', event => event.preventDefault());
 		window.onbeforeunload = function(e) {
@@ -50,13 +44,12 @@
 	</script>
 	<style>
 		body {
-    font-family: arial;
-    margin: 0;
-    padding: 0;
-    background-color: rgb(10, 10, 10);
-    color: #ffffff;
-    overflow: hidden;
-}
+			font-family: arial;
+			margin: 0;
+			padding: none;
+			background-color: #555555;
+			color: #f0b418;
+		}
 
 		.emscripten {
 			padding-right: 0;
@@ -72,14 +65,10 @@
 		div.emscripten_border {}
 
 		canvas.emscripten {
-    border: 0px none;
-    background-image: url(xd.png);
-    width: 100%;
-    height: 100%;
-    max-width: 100vw;
-    max-height: 100vh;
-    object-fit: contain;
-}
+			border: 0px none;
+			background-image: url(xd.png);
+			box-shadow: #ffa600 0px 0px 9px 4px;
+		}
 
 		@-webkit-keyframes rotation {
 			from {
@@ -145,15 +134,15 @@
 			color: rgba(0, 255, 0, 255);
 			font-family: 'Lucida Console', Monaco, monospace;
 			outline: none;
-			border-color: #ffffff;
+			border-color: #f0B418;
 		}
 
 		.loader {
 			border: 4px solid #f3f3f3;
 			border-radius: 50%;
 			border-top: 4px solid #ffa600;
-			width: 200px;
-			height: 200px;
+			width: 16px;
+			height: 16px;
 			-webkit-animation: spin 2s linear infinite;
 			animation: spin 2s linear infinite;
 		}
@@ -182,7 +171,7 @@
 		a.glow:hover,
 		a.glow:focus {
 			text-decoration: none;
-			color: #ffffff;
+			color: #F0B418;
 			text-shadow: none;
 			-webkit-transition: 500ms linear 0s;
 			-moz-transition: 500ms linear 0s;
@@ -199,7 +188,7 @@
 		}
 
 		hr {
-			border-color: #5f5f5f;
+			border-color: #ffa600;
 		}
 
 		#label_file_select {
@@ -211,9 +200,9 @@
 		}
 
 		input[type="text"i] {
-			color: #ffffff;
+			color: #f0b418;
 			background-color: #555555;
-			border: 2px solid #ffffff;
+			border: 2px solid #f0b418;
 			font-family: Segoe UI;
 			font-size: 15px;
 			transition: 0.5s all;
@@ -234,7 +223,7 @@
 	</style>
 </head>
 
-<body onerror=alert(event); bgcolor=#555555 text=#ffffff link=#ffa600 vlink=#ffa600>
+<body onerror=alert(event); bgcolor=#555555 text=#F0B418 link=#ffa600 vlink=#ffa600>
 	<div class="emscripten_border">
 		<canvas style="display:none" class="emscripten" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
 	</div>
@@ -242,8 +231,8 @@
 	<p>
 	<div style=width:100%;height:0px>
 		<div style="float:left;" id="status">Downloading...</div>
-		<div id="progress1" style="position:relative;z-index:10;display:none;float:right;width:70%;border-color:#ffffff;border-style:solid;border-width:2px;height:20px; visibility: hidden;">
-			<div id=progress style="text-align:center;background-color:#ffffff;border-color:#555555;border-style:solid:border-width:3px;width:50%;height:20px; visibility: hidden;"></div>
+		<div id="progress1" style="position:relative;z-index:10;display:none;float:right;width:70%;border-color:#F0B418;border-style:solid;border-width:2px;height:20px; visibility: hidden;">
+			<div id=progress style="text-align:center;background-color:#F0B418;border-color:#555555;border-style:solid:border-width:3px;width:50%;height:20px; visibility: hidden;"></div>
 		</div><br>
 	</div><br></p>
 
@@ -252,21 +241,21 @@
 
 	<center> <a class="glow">
 		<div id=optionsTitle>
-			<h1>ProdByXander - Half-Life Web Version</h1>
+			<h1>Xash</h1>
 		</div>
 	</a></center>
 	<center> <form style=display:none id=fSettings>
-		<a class='glow'>Select filesystem for save and restore: (Default IndexedDB)</a>
+		<a class='glow'>Select filesystem for save and restore:</a>
 		<div id=idbHider style=display:none><label><input name=a type=radio id=rIndexedDB checked=true />IndexedDB</label><br></div>
 		<label><input name=a type=radio id=rLocalStorage />in Local storage</label><br>
 		<label><input name=a type=radio id=rNone />in RAM</label><br><br>
 		<hr>
-			<div id=zipHider style=display:none><input name=b type=radio id=rZip checked=true />Version Selector
+			<div id=zipHider style=display:none><input name=b type=radio id=rZip checked=true />ZIP archive from server
 		</label><select id=selectZip style=display:none></select><br></div>
-		Command-line arguments:
-		<input name=d type=text id=iArgs value="-dev 0 -game valve" /><br><br>
-		<hr>
-		<a class='glow' onclick="startXash();return false;">Launch Half Life!</a>
+
+		<label><input name=b type=radio id=rLocalZip />Local ZIP file:</label><label id="label_file_select"><input type=file name=c id=iZipFile /><a class='glow'> Select ZIP file </a></label><br><br><hr>
+		Command-line arguments: <input name=d type=text id=iArgs value="-dev 1 -game valve" /><br><br>
+		<a class='glow' onclick="startXash();return false;">Launch Xash!</a>
 		<br><hr>
 		<div id='linksPlaceholder' style=display:none>Download archives to load locally next time:</div><br>
 		<label>
@@ -638,7 +627,7 @@
 			Module.run = haltRun;
 			run = haltRun;
 
-			Module.setStatus("downloaded!");
+			Module.setStatus("Xash3D downloaded!");
 			showElement('loader1', false);
 			showElement('optionsTitle', true);
 
@@ -655,7 +644,7 @@
 				script.onload = function() {
 					moduleCount++;
 					if (moduleCount == 3) {
-						Module.setStatus("Game is ready to start and is downloaded!");
+						Module.setStatus("Scripts downloaded!");
 					}
 				};
 				document.body.appendChild(script);
