Add system information box to index.html

--- a/index.html
+++ b/index.html
@@ -548,6 +548,24 @@
 
 			<div class="separator"></div>
 
+			<!-- Information Box -->
+<div class="form-section">
+    <label class="form-label">System Information</label>
+    <div style="background: var(--secondary); border: 2px solid var(--border); border-radius: calc(var(--radius) - 4px); padding: 1rem;">
+        <div style="font-size: 0.875rem; color: var(--foreground); margin-bottom: 0.5rem;">
+            <strong style="color: var(--primary);">Engine:</strong> Xash3D FWGS
+        </div>
+        <div style="font-size: 0.875rem; color: var(--foreground); margin-bottom: 0.5rem;">
+            <strong style="color: var(--primary);">Memory:</strong> 150 MB Allocated
+        </div>
+        <div style="font-size: 0.875rem; color: var(--foreground);">
+            <strong style="color: var(--primary);">Status:</strong> Ready to Launch
+        </div>
+    </div>
+</div>
+
+<div class="separator"></div>
+			
 			<!-- Progress Bar -->
 			<div class="progress-container" id="progressContainer">
 				<div class="progress-label">
