Add developer console commands and update memory info
Updated developer console commands section and memory allocation information.

--- a/index.html
+++ b/index.html
@@ -548,6 +548,21 @@
 
 			<div class="separator"></div>
 
+				<div class="form-section">
+    <label class="form-label">Developer Console Commands</label>
+    <div style="background: var(--secondary); border: 2px solid var(--border); border-radius: calc(var(--radius) - 4px); padding: 1rem;">
+        <div style="font-size: 0.875rem; color: var(--foreground); margin-bottom: 0.5rem;">
+            <strong style="color: var(--primary);">-dev 1 -game valve</strong> Gives Access to console
+        </div>
+        <div style="font-size: 0.875rem; color: var(--foreground); margin-bottom: 0.5rem;">
+            <strong style="color: var(--primary);">god</strong> You must put this in the command bar in game using the ` key, to activate.
+        </div>
+        <div style="font-size: 0.875rem; color: var(--foreground);">
+            <strong style="color: var(--primary);">Impulse 101</strong> You must put this in the command bar in game to spawn all weapons and get max ammo.
+        </div>
+    </div>
+</div>
+			
 			<!-- Information Box -->
 <div class="form-section">
     <label class="form-label">System Information</label>
@@ -556,7 +571,7 @@
             <strong style="color: var(--primary);">Engine:</strong> Xash3D FWGS
         </div>
         <div style="font-size: 0.875rem; color: var(--foreground); margin-bottom: 0.5rem;">
-            <strong style="color: var(--primary);">Memory:</strong> 150 MB Allocated
+            <strong style="color: var(--primary);">Memory:</strong> 2 GB RAM Allocated
         </div>
         <div style="font-size: 0.875rem; color: var(--foreground);">
             <strong style="color: var(--primary);">Status:</strong> Ready to Launch
