Fix title casing and update primary color variable

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="MobileOptimized" content="2000">
 	<meta name="HandheldFriendly" content="true">
-	<title>ProdByXander - Half Life v4</title>
+	<title>ProdByXander - Half Life V4</title>
 	
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=swap" rel="stylesheet">
 
 	<style>
 		/* ===== CSS RESET & BASE ===== */
@@ -30,7 +30,7 @@
 			--card-foreground: hsl(0 0% 96%);
 			--primary-hue: 36;
 			--accent-hue: 180;
-			--primary: hsl(var(--primary-hue) 100% 50%);
+			--primary: hsl(${primaryHue}, 0%, 100%)
 			--primary-dark: hsl(var(--primary-hue) 100% 35%);
 			--accent: hsl(var(--accent-hue) 100% 50%);
 			--secondary: hsl(0 0% 14%);
