Update title in index.html for new branding

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="MobileOptimized" content="2000">
 	<meta name="HandheldFriendly" content="true">
-	<title>ProdByXander - Half Life V4</title>
+	<title>IXL | Math, Language Arts, Science, Social Studies, and Spanish</title>
 	
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
