Update title and subtitle in index.html

--- a/index.html
+++ b/index.html
@@ -1032,8 +1032,8 @@
 	<div class="container" id="mainContainer">
 		<!-- Title Section -->
 		<div class="title-section">
-			<h1 class="title">ProdByXander</h1>
-			<h2 class="subtitle">Half-Life Web Version V4</h2>
+			<h1 class="title">chargoggagoggmanchauggagoggchaubunagungamaugg, ProdByXander</h1>
+			<h2 class="subtitle">Half-Life Web Port V4</h2>
 		</div>
 
 		<!-- Settings Card -->
@@ -1165,7 +1165,7 @@
 
 	<!-- Footer -->
 	<footer class="footer">
-		<p class="footer-text">Engineered in the Black Mesa Research Facility by Xander</p>
+		<p class="footer-text">Engineered in the Black Mesa Research Facility by Xander <3</p>
 	</footer>
 
 	<!-- Rainbow Spiral Grid Animation -->
