--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=swap" rel="stylesheet">
-	
+    <link href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=swap" rel="stylesheet">
+
 	<style>
 		/* ===== CSS RESET & BASE ===== */
 		*, *::before, *::after {
@@ -986,27 +986,31 @@
 	<!-- Constellation Canvas -->
 	<canvas id="constellationCanvas"></canvas>
 
-	<!-- Color Picker -->
-	<div class="color-picker">
-		<button class="color-picker-btn" id="colorPickerBtn" onclick="toggleColorPicker()">
+	<!-- Info Button -->
+	<div class="info-btn-container">
+		<button class="info-btn" onclick="toggleInfoModal()">
 			<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-				<path d="M12 15.5A3.5 3.5 0 0 1 8.5 12 3.5 3.5 0 0 1 12 8.5a3.5 3.5 0 0 1 3.5 3.5 3.5 3.5 0 0 1-3.5 3.5m7.43-2.53c.04-.32.07-.64.07-.97 0-.33-.03-.66-.07-1l2.11-1.63c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.31-.61-.22l-2.49 1c-.52-.39-1.06-.73-1.69-.98l-.37-2.65A.506.506 0 0 0 14 2h-4c-.25 0-.46.18-.5.42l-.37 2.65c-.63.25-1.17.59-1.69.98l-2.49-1c-.22-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64L4.57 11c-.04.34-.07.67-.07 1 0 .33.03.65.07.97l-2.11 1.66c-.19.15-.25.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1.01c.52.4 1.06.74 1.69.99l.37 2.65c.04.24.25.42.5.42h4c.25 0 .46-.18.5-.42l.37-2.65c.63-.26 1.17-.59 1.69-.99l2.49 1.01c.22.08.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.66Z"/>
+				<circle cx="12" cy="12" r="10"/>
+				<path d="M12 16v-4"/>
+				<path d="M12 8h.01"/>
 			</svg>
 		</button>
-		<div class="color-picker-popup" id="colorPickerPopup">
-			<div class="color-picker-section">
-				<span class="color-picker-label">Primary Color</span>
-				<div class="color-presets" id="primaryPresets"></div>
-				<input type="range" class="color-slider" id="primarySlider" min="0" max="360" value="36">
-			</div>
-			<div class="color-picker-section">
-				<span class="color-picker-label">Accent Color</span>
-				<div class="color-presets" id="accentPresets"></div>
-				<input type="range" class="color-slider" id="accentSlider" min="0" max="360" value="180">
-			</div>
-			<div class="color-preview">
-				<div class="color-preview-box" id="primaryPreview">Primary</div>
-				<div class="color-preview-box" id="accentPreview">Accent</div>
+	</div>
+
+	<!-- Info Modal -->
+	<div class="info-modal-overlay" id="infoModalOverlay" onclick="closeInfoModal(event)">
+		<div class="info-modal" onclick="event.stopPropagation()">
+			<h3 class="info-modal-title">Contributors</h3>
+			<div class="contributor">
+				<img src="https://avatars.githubusercontent.com/u/173015974?s=400&u=534e04fba63310464bdd90792c71b33a3208f3d9" alt="Xander Cruz" class="contributor-avatar">
+				<span class="contributor-name">Xander Cruz</span>
+				<span class="contributor-role">Developer</span>
+				<a href="https://github.com/BombedByXander" target="_blank" rel="noopener noreferrer" class="contributor-github">
+					<svg viewBox="0 0 24 24" aria-hidden="true">
+						<path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd"/>
+					</svg>
+					<span>GitHub</span>
+				</a>
 			</div>
 		</div>
 	</div>
@@ -1103,7 +1107,7 @@
 			<!-- Launch Button -->
 			<div class="launch-btn-wrapper">
 				<button class="launch-btn" id="launchBtn" onclick="startXash();">
-					<span id="launchBtnText">Launch Half Life!</span>
+					<span id="launchBtnText">Launch Half-Life</span>
 				</button>
 			</div>
 
@@ -1511,22 +1515,21 @@
 	<script>
 		(function() {
 			const idleMessages = [
-				"Ready to enter Ku Klux Klan?",
-				"Welcome to the KKK!",
-				"Fuck tech, this sites unblockable lmao",
-				"Im bored idk what im putting here",
-				"Gordon Freeman is a fucking pedophile, he fucks the headcrabs!",
-				"Game is ready to launch!",
-				"Heil hitler!"
+				"Ready to enter Black Mesa...",
+				"Welcome to the Lambda Complex",
+				"The right man in the wrong place...",
+				"Prepare for unforeseen consequences",
+				"Rise and shine, Mr. Freeman...",
+				"Game is ready to launch!"
 			];
 
 			const loadingMessages = [
-				"Initializing Reactor systems...",
+				"Initializing Black Mesa systems...",
 				"Loading valve game assets...",
-				"Downloading & Inserting Textures...",
-				"Fucking around with the flux capacitor...",
-				"Connecting to Ku Klux Klan's public wifi...",
-				"Finishing loading particles lmao..."
+				"Preparing anomalous materials...",
+				"Calibrating anti-mass spectrometer...",
+				"Connecting to Lambda Complex...",
+				"Resonance cascade imminent..."
 			];
 
 			let currentMessages = idleMessages;
@@ -2018,8 +2021,18 @@
 				document.getElementById('output').style.display = "none";
 			}
 		});
+
+		// Info Modal Functions
+		function toggleInfoModal() {
+			const modal = document.getElementById('infoModalOverlay');
+			modal.classList.toggle('visible');
+		}
+
+		function closeInfoModal(event) {
+			if (event.target.id === 'infoModalOverlay') {
+				document.getElementById('infoModalOverlay').classList.remove('visible');
+			}
+		}
 	</script>
 </body>
 </html>
-
-
