Revise command descriptions and system info labels
Updated command descriptions and system information labels.

--- a/index.html
+++ b/index.html
@@ -1092,24 +1092,32 @@
 				<span class="command-name">-dev 1 -game valve</span>
 				<span class="command-desc"> Gives Access to console</span>
 			</div>
+			<div class="command-item">
+				<span class="command-name">god</span>
+				<span class="command-desc"> You must put this in the command bar in game using the ` key, to activate.</span>
 			</div>
 			<div class="command-item">
 				<span class="command-name">impulse 101</span>
-				<span class="command-desc">Run this command in game to unlock all weapons & ammo ` to open console.</span>
+				<span class="command-desc"> You must put this in the command bar in game to spawn all weapons and get max ammo.</span>
 			</div>
 		</div>
 
 		<!-- System Information -->
 		<div class="info-card">
-			<h3 class="info-card-title">System Info ℹ️</h3>
+			<h3 class="info-card-title">System Information</h3>
 			<div class="system-info-item">
-				<span class="system-info-label">Javascript Engine:</span>
+				<span class="system-info-label">Engine:</span>
 				<span class="system-info-value">Xash3D FWGS</span>
 			</div>
 			<div class="system-info-item">
 				<span class="system-info-label">Memory:</span>
-				<span class="system-info-value">3 GB RAM Allocated</span>
+				<span class="system-info-value">2 GB RAM Allocated</span>
 			</div>
+			<div class="system-info-item">
+				<span class="system-info-label">Status:</span>
+				<span class="system-info-value" id="systemStatus">Ready to Launch</span>
+			</div>
+		</div>
 
 		<!-- Status Section -->
 		<div class="status-section">
