Update system information display in index.html

--- a/index.html
+++ b/index.html
@@ -1104,14 +1104,14 @@
 
 		<!-- System Information -->
 		<div class="info-card">
-			<h3 class="info-card-title">System Information</h3>
+			<h3 class="info-card-title">System Information ℹ️</h3>
 			<div class="system-info-item">
-				<span class="system-info-label">Engine:</span>
+				<span class="system-info-label">Javascript Engine:</span>
 				<span class="system-info-value">Xash3D FWGS</span>
 			</div>
 			<div class="system-info-item">
 				<span class="system-info-label">Memory:</span>
-				<span class="system-info-value">2 GB RAM Allocated</span>
+				<span class="system-info-value">3 GB RAM Allocated</span>
 			</div>
 			<div class="system-info-item">
 				<span class="system-info-label">Status:</span>
